Added Users window both for creating an account and for logging in, and the grouped the styles in the Resources directory to keep a general theme

--- a/Chessboard.Data/ConnectionSettings.json
+++ b/Chessboard.Data/ConnectionSettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=DESKTOP-0ERH0I4\\SQLEXPRESS;Database=Chess;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbConnection": "Server=DESKTOP-0ERH0I4\\SQLEXPRESS;Database=Chess;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ChessConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Chess;Trusted_Connection=True;"
   }
 }
