--- a/Chessboard.Models/Chessboard.Models.csproj
+++ b/Chessboard.Models/Chessboard.Models.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Chessboard.Data\Chessboard.Data.csproj" />
+  </ItemGroup>
+
 </Project>
